--- a/latex/variables.tex
+++ b/latex/variables.tex
@@ -1,1 +1,1 @@
-\newcommand\ThesisTitle{Music Source Separation with Nonstationary Gabor Transforms}
+\newcommand\ThesisTitle{Music Source Separation with the sliCQ Transform}
