Improve thesis proposal

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -278,16 +278,6 @@ journal = {Signal Processing},
 doi = {10.1016/j.sigpro.2007.01.016}
 }
 
-@article{umxsota,
-author = {Stöter, Fabian-Robert and Uhlich, Stefan and Liutkus, Antoine and Mitsufuji, Yuki},
-year = {2019},
-pages = {1667},
-title = {Open-Unmix - A Reference Implementation for Music Source Separation},
-volume = {4},
-journal = {Journal of Open Source Software},
-doi = {10.21105/joss.01667}
-}
-
 @misc{sisec2018,
       title={The 2018 Signal Separation Evaluation Campaign}, 
       author={Fabian-Robert Stöter and Antoine Liutkus and Nobutaka Ito},
@@ -508,6 +498,24 @@ url = {https://arpi.unipi.it/retrieve/handle/11568/159584/458549/tasl.pdf}
 author = {Simpson, Andrew},
 year = {2015},
 title = {Time-Frequency Trade-offs for Audio Source Separation with Binary Masks}
+}
+
+
+@inproceedings{tftradeoff2,
+  author    = {Ilya Kavalerov and
+               Scott Wisdom and
+               Hakan Erdogan and
+               Brian Patton and
+               Kevin W. Wilson and
+               Jonathan Le Roux and
+               John R. Hershey},
+  title     = {Universal Sound Separation},
+  booktitle = {2019 {IEEE} Workshop on Applications of Signal Processing to Audio
+               and Acoustics, {WASPAA} 2019, New Paltz, NY, USA, October 20-23, 2019},
+  pages     = {175--179},
+  publisher = {{IEEE}},
+  year      = {2019},
+  doi       = {10.1109/WASPAA.2019.8937253},
 }
 
 @misc{driedger,
