--- a/latex/proposal.tex
+++ b/latex/proposal.tex
@@ -1,4 +1,4 @@
-\documentclass[letter,12pt]{scrartcl}
+\documentclass[letter,12pt]{article}
 \usepackage[left=2cm, right=2cm, top=2cm, bottom=2cm]{geometry}
 %\setlength{\parindent}{0pt}
 %\usepackage[shortlabels]{enumitem}
@@ -46,35 +46,35 @@
 
 \section{Introduction / Motivation}
 
-The short-time Fourier transform (STFT) is an important tool for the time-frequency analysis of acoustic signals. It is computed by applying the discrete Fourier transform on overlapping, fixed-size windows of the input signal, and it is commonly used to represent musical signals in digital signal processing algorithms and machine learning models for music information retrieval (MIR). Despite the ubiquity of the STFT, it is limited by a fixed and bounded time-frequency resolution determined by the window size. In the Nonstationary Gabor Transform (NSGT) \cite{balazs}, and its realtime variant the sliCQ transform \cite{invertiblecqt}, the Fourier transform is applied with varying window sizes to adapt the time-frequency resolution to fit the characteristics of the studied signals. A well-known use of the NSGT or sliCQ transform is to implement the constant-Q transform for music \cite{jbrown, klapuricqt}.
+The short-time Fourier transform (STFT) is an important tool for the time-frequency analysis of acoustic signals. It is computed by applying the discrete Fourier transform on overlapping, fixed-size windows of the input signal, and it is commonly used to represent music in digital signal processing algorithms and machine learning models for music information retrieval (MIR). Despite its popularity, it is limited by a fixed and bounded time-frequency resolution determined by the window size. In the sliCQ transform \cite{invertiblecqt}, which is the realtime variant of the Nonstationary Gabor Transform (NSGT) \cite{balazs}, the Fourier transform is applied with varying window sizes to adapt the time-frequency resolution to the characteristics of the studied signal. A well-known use of sliCQ transform is to implement the constant-Q transform for music \cite{jbrown, klapuricqt}.
 
-In the task of music source separation, a mixed song is decomposed into its constituent sources, which are typically either different instruments (drums, bass, vocals) or groups of sources with similar characteristics (percussive, harmonic) \cite{musicsepgood}. Machine learning models for music source separation based on the STFT are numerous and have achieved success for several years \cite{sisec2018}. In this thesis, the STFT is replaced with the sliCQ in Open-Unmix (umx), a contemporary neural network \cite{umx} for music source separation. The proposed model, \textit{umx-sliCQ}, was submitted to the ISMIR 2021 Music Demixing Challenge, where it successfully separated the hidden data set within the required time limit. The submitted model did not surpass STFT-based submissions, but demonstrates a viable and flexible starting point for future sliCQ-based models.
+In the task of music source separation \cite{musicsepgood}, a mixed song is decomposed into its constituent sources, which are typically either different instruments (drums, bass, vocals) or groups of sources with similar characteristics (percussive, harmonic). Machine learning models for music source separation with the STFT have achieved success in recent years \cite{sisec2018}, but choosing the appropriate time-frequency resolution for the STFT is an important step which can significantly affect results \cite{tftradeoff1, tftradeoff2}. In this thesis, the STFT is replaced with the sliCQ transform in Open-Unmix (umx), a contemporary neural network \cite{umx} for music source separation. The proposed model, \textit{umx-sliCQ}, was submitted to the ISMIR 2021 Music Demixing Challenge,\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}} where it successfully separated the hidden data set within the required time limit. The submitted model did not surpass STFT-based submissions, but demonstrates a viable and flexible starting point for future sliCQ-based models.
 
 \section{Previous Work}
 
-\citet{umx}'s Open-Unmix is an open-source, reference implementation for music source separation, based on the STFT and intended to foster research. It was chosen as the base model to adapt to the sliCQ. It uses the same window size STFT for each source, but a survey shows that the STFT window size can significantly affect the source separation performance, depending on the source \cite{tftradeoff1}. Similarly, some music source separation algorithms \cite{fitzgerald1, driedger} use different window size STFTs to improve the music source separation performance. Another system \cite{fitzgerald2} replaced the STFT with the constant-Q transform to improve the separation quality of vocals. \citet{plumbley2} presented a multi-resolution neural network for vocal separation. In their model, ``multi-resolution'' refers to time-frequency resolution, and an effect similar to the constant-Q transform is achieved by varying the size of the time and frequency convolutional filters applied to the STFT.
+\citet{umx}'s Open-Unmix is an open-source, reference implementation of a deep neural network for music source separation, based on the STFT and intended to foster reproducible research. It was chosen as the initial model to adapt to the sliCQ transform. Other music source separation algorithms exist which use multiple STFTs with different window size \cite{fitzgerald1, driedger}, or which replace the STFT with the constant-Q transform \cite{fitzgerald2}. In both cases, the aim is to improve the results by manipulating time-frequency resolution. \citet{plumbley2} presented a multi-resolution neural network for singing voice separation in music. In their model, ``multi-resolution'' refers to time-frequency resolution, which is varied by applying different sizes of time and frequency filters to the STFT.
 
 \section{Proposed Research / Methodology}
 
 The thesis will be broken up into the following sections:
 \begin{tight_enumerate}
 	\item
-		Present the motivation for why time-frequency analysis is useful for acoustic signals, and how the STFT is typically used in MIR systems. Describe \citet{gabor1946}'s time-frequency uncertainty principle and how this limitation is manifested in the STFT.
+		Present the motivation for why time-frequency analysis is useful for acoustic signals, how the STFT is typically used in music processing systems, and its limitations.
 	\item
-		Describe the constant-Q transform, NSGT, and sliCQ transforms, and how they use varying time-frequency resolution to better represent musical signals.
+		Describe the constant-Q transform, NSGT, and sliCQ transforms, and how they use varying time-frequency resolution to better represent musical signals. Show why the NSGT and sliCQ are good implementation choices for the constant-Q transform.
 	\item
-		Describe the parallelized tensor operations and performance optimizations applied to the sliCQ transform using PyTorch \cite{pytorch}, to enable its efficient computation in GPU-based machine learning models.
+		Describe the implementation of tensor operations in the sliCQ transform using PyTorch \cite{pytorch}, enabling its efficient and optimized computation in deep learning models.
 	\item
-		Present Open-Unmix and describe its architecture, codebase, and baseline performance.
+		Describe the task of music source separation, as well as typical STFT-based approaches. Present Open-Unmix and describe its architecture, codebase, and baseline performance.
 	\item
 		Describe how Open-Unmix was adapted step by step to replace the STFT with the sliCQ transform, and show the training details and performance of the final trained model (as well as important intermediate steps such as hyperparameter tuning).
 \end{tight_enumerate}
 
 \section{Contributions / Summary}
 
-In the task of music source separation, time-frequency resolution plays an important role. The sliCQ transform, a transform with adaptive time-frequency resolution, is explored as a replacement of the popular and widely-used STFT in Open-Unmix (umx), a high-performance open-source neural network for music source separation. To achieve this, the reference Python implementation for the sliCQ transform was forked to support fast GPU implementation based on PyTorch. This first contribution should enable the sliCQ transform to be used by other researchers in different machine learning models and problems.
+In music source separation approaches that use the STFT, choosing the appropriate time-frequency resolution plays an important role. The sliCQ transform with varying time-frequency resolution is explored as a replacement for the STFT. First, the reference Python implementation for the sliCQ transform\footnote{\url{https://github.com/grrrr/nsgt}} was forked\footnote{\url{https://github.com/sevagh/nsgt}} to add support for fast and efficient GPU computation using PyTorch. This first contribution enables the sliCQ transform to be used by other researchers in different GPU-based machine learning models and problems going forward.
 
-The proposed model for music source separation, \textit{umx-sliCQ}, was trained and submitted to the ISMIR 2021 Music Demixing Challenge. It passed the test suite, but couldn't surpass the score of the original STFT-based model. However, the performance of the sliCQ-based model was shown to improve significantly after several rounds of hyperparameter tuning. Future work can build on this and explore more performance gains from further model architecture changes and hyperparameter tuning.
+Next, the sliCQ transform was used in a deep neural network for music source separation, using the STFT-based Open-Unmix as a starting point. The proposed model, \textit{umx-sliCQ}, was submitted to the ISMIR 2021 Music Demixing Challenge. It passed the test suite, showing that the sliCQ transform can be used in an effective music source separation system. The final submitted model did not surpass the score of the original Open-Unmix model. However, the performance of \textit{umx-sliCQ} was shown to improve significantly after several rounds of hyperparameter tuning. Future work should build on this and explore more performance gains from further model architecture changes or hyperparameter tuning.
 
 \vfill
 \clearpage %force a page break
